# conf

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  TODO.md  Xdefaults  amethyst.yml  amethyst_test.sh  bash_profile  bashrc  chrome-remote-desktop-session  config_fish_test.fish  cshrc  cvsrc  dircolors.dark  dircolors.light  editrc  emacs  enscriptrc  env  env_test.sh  exitrc  exrc  fish  fish_prompt_test.sh  fish_test.sh  freetds.conf  gdbinit  gitauthors  gitconfig  gitconfig_test.sh  gitexclude  hgexclude  hgrc  hypr_test.sh  imwheelrc  inputrc  kshrc  login  (+48 more)
.github/workflows/: test.yml
agents/: AGENTS.md
config/: compton.conf
config/dunst/: dunstrc
config/elvish/: rc.elv
config/elvish/lib/: shrc.elv
config/fish/: config.fish  vcs.fish  vcs.git.fish  vcs.hg.fish  vcs.jj.fish
config/fish/functions/: my_vi_key_bindings.fish
config/fuzzel/: fuzzel-light.ini  fuzzel.ini
config/helix/: config.toml
config/hypr/: README.md  hypridle.conf  hyprland-local.lua.template  hyprland.conf  hyprland.conf.local.template  hyprland.lua  hyprlock.conf
config/hypr/scripts/: apply-input.sh  launch-fuzzel.sh  layout-cycle.sh  lid.sh  run.sh  theme-daemon.sh  theme.sh  toggle-layout.sh
config/i3/: config
config/i3status/: config  dwm
config/jj/: config.toml
config/kanshi/: config
config/kanshi/hosts/: default.conf  (+2 more)
config/kitty/: kitty.conf
config/nushell/: config.nu  config_test.nu
config/nvim/: init.vim
config/polybar/: config
config/qtile/: config.py  mydynamic.py  mystack.py
config/river/: README.md  base  init
config/sakura/: sakura.conf
config/shpool/: config.toml
config/sway/: README.md  config  config.local.example-desktop  config.local.example-laptop  config.local.template
config/swayidle/: config
config/swaylock/: config
config/swaync/: colors-dark.css  colors-light.css  common.css  config.json  style-light.css  style.css
config/uwsm/: env  env-hyprland
config/waybar/: colors-dark.css  colors-light.css  common.css  config  config.jsonc  style-light.css  style.css
config/wingo/: hooks.wini  key.wini  options.wini  theme.wini
config/xmobar/: xmobarrc
devilspie/: all.ds
espanso/config/: default.yml
espanso/match/: base.yml
gittemplates/hooks/: post-merge  post-rewrite  pre-commit
kitty/: kitty.conf
templates/: Makefile.BUILD.bazel  Makefile.Cargo.toml  Makefile.Makefile  Makefile.angular.json  tasks.json.BUILD.bazel  tasks.json.GNUmakefile  tasks.json.Makefile  tasks.json.angular.json  tasks.json.build.sbt
vim/colors/: basic.vim
vim/ftplugin/: go.vim  man.vim
vim/indent/: python.vim
vim/plugin/: autoswap.vim  bracketed-paste.vim
vim/snippets/: bzl.snippets  c.snippets  python.snippets  sh.snippets
xmonad/: xmonad.hs
(+11 files in other folders)
